--- a/index.html
+++ b/index.html
@@ -42,43 +42,53 @@
           class="full-width d-flex justify-content-center and align-items-center"
         >
           <form class="rounded p-4 p-sm-3" id="form">
-              <!-- username -->
+            <!-- username -->
             <div class="mb-3 form-group">
               <label for="userName" class="form-label">Username</label>
-              <input type="text" class="form-control" id="userName"/>
+              <div class="inputgroup">
+                <input type="text" class="form-control" id="userName" />
+                <i class="input-icon"><img src="person.svg" alt=""
+                    /></i>
+              </div>
               <small>3 letters or more</small>
             </div>
 
-            
             <div class="row g-3">
-                <!-- email address -->
+              <!-- email address -->
               <div class="col-md-6 form-group">
                 <label for="emailAddress" class="form-label"
                   >Email Address</label
                 >
+                <div class="inputgroup">
                 <input
                   type="email"
                   class="form-control"
                   id="emailAddress"
-                  aria-describedby="emailHelp" required
-                />
+                  aria-describedby="emailHelp"
+                  required/>
+                  <i class="input-icon"><img src="mail.svg" alt=""/></i>
+                
+            </div>
               </div>
               <!-- phone number -->
               <div class="col-md-6 form-group">
                 <label for="phoneNumber" class="form-label">Phone Number</label>
+                <div class="inputgroup">
                 <input type="text" class="form-control" id="phoneNumber" />
+                <i class="input-icon"><img src="call.svg" alt=""
+                    /></i></div>
               </div>
             </div>
 
             <div class="row g-3">
-                <!-- password -->
+              <!-- password -->
               <div class="col-md-6 form-group">
                 <label for="password" class="form-label">Password</label>
-                <div class="containIcon">
-                  <input type="password" class="form-control" id="password"/>
-                  <i class="eye" id="togglePassword"
-                    ><img src="eye.svg" alt=""
+                <div class="containIcon inputgroup">
+                  <input type="password" class="form-control" id="password" />
+                  <i class="eye" id="togglePassword"><img src="eye.svg" alt=""
                   /></i>
+                  <i class="input-icon"><img src="lock-closed.svg" alt=""/></i>
                 </div>
                 <small>minimun of 6 characters</small>
               </div>
