--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <label for="confirmPassword" class="form-label"
                   >Confirm Password</label
                 >
-                <div class="containIcon">
+                <div class="containIcon inputgroup">
                   <input
                     type="password"
                     class="form-control"
@@ -105,7 +105,7 @@
                   />
                   <i class="eye" id="toggleConfirmPassword"
                     ><img src="eye.svg" alt=""
-                  /></i>
+                  /></i><i class="input-icon"><img src="lock-closed.svg" alt=""/></i>
                 </div>
                 <small>must match password</small>
               </div>
