--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
             </div>
 
-            <div class="row g-3">
+            <div class="row g-3   margin-bottom-20px">
               <!-- password -->
               <div class="col-md-6 form-group">
                 <label for="password" class="form-label">Password</label>
@@ -119,14 +119,8 @@
               </select>
             </div>
 
-            <!-- check box  -->
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="rememberMe" />
-              <label class="form-check-label" for="rememberMe"
-                >Remember Me</label
-              >
-            </div>
-            <button type="submit" class="btn btn-primary btn-lg btn-block">
+            <!-- submit button -->
+            <button type="submit" id="submitButton" class="btn btn-primary btn-lg btn-block">
               Login
             </button>
           </form>
